<resources>
    <string name="app_name">NoticeDemo</string>
    <string name="msg_token_fmt">Token: %s</string>
    <string name="request_fmt">%s%s</string>

    <!-- Json field name -->
    <string name="server_address_field">server_address</string>
    <string name="login_field">login</string>
    <string name="token_field">token</string>
    <string name="do_field">token</string>
    <string name="refresh_field">refresh</string>
    <string name="register_field">register</string>
    <!-- Json field name end -->

    <!-- login page -->
    <string name="text_login">LOGIN</string>
    <string name="text_user">User</string>
    <string name="text_password">Password</string>
    <string name="text_title_login_page">Login page</string>
    <string name="text_remember_password">Remember me</string>
    <string name="text_register">Register</string>
    <string name="text_back_button">back</string>
    <!-- login page end -->

    <!-- register page -->
    <string name="text_title_register_page">Register page</string>
    <string name="text_repeat_password">Repeat password</string>
    <!-- register page end -->

</resources>
